Insertar patente funcionando

--- a/insertarPatente.html
+++ b/insertarPatente.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<head>
-	<title></title>
-</head>
-
 <body>
-		<div id="container">
-				<input type="text" class="form-control" id="patente" name="patente" placeholder="Ingrese Patente">
-				<br><br>
-				<input type="button" class="btn btn-primary btn_block form-control" value="Ingresar Patente" id="guardar" name="guardar">
+		<div id="ingresarAuto">
+				<input type="text" class="form-control text-success" id="patente" name="patente" placeholder="INGRESE PATENTE AQUI">
+				
+				<input type="button" onClick='insertarPatente()' class="btn btn-primary btn_block form-control" value="Ingresar Patente" id="guardar" name="guardar">
 
 		</div>
-
-
 </body>
-</html>
