--- a/insertarUsuarios.html
+++ b/insertarUsuarios.html
@@ -12,7 +12,7 @@
 		<input type='radio' value='User' name='perfil' id='user'>Usuario
 		<br>
 		<br>
-		<input type='button' class='form-control btn btn-primary' Value='Guardar Usuario' onClick='insertarUsuarios()'>
+		<input type='button' class='form-control btn btn-primary' value='Guardar Usuario' onClick='insertarUsuarios()'>
 
 	</div>
 </body>
