Funciona Borrar y Agregar Usuarios

--- a/insertarUsuarios.html
+++ b/insertarUsuarios.html
@@ -2,14 +2,14 @@
 <body>
 	<div id="usuario" class='form-control' style="width:300px">
 
-		<input type='text' class='form-control' placeholder='Ingrese Correo' id='correo'>
+		<input type='text' class='form-control' placeholder='Ingrese Correo' id='correoIngreso'>
 		<br>
 		<input type='password' class='form-control' placeholder='Ingrese Password' id='pass'>
 		<br>
 		<label class='label label-default'>Seleccione el perfil:</label>
-		<input type='radio' value='Admin' name='perfil' id='admin'><br>Administrador
+		<input type='radio' value='admin' name='perfil' id='admin'><br>Administrador
 		<br>
-		<input type='radio' value='User' name='perfil' id='user'>Usuario
+		<input type='radio' value='testing' name='perfil' id='user'>Usuario
 		<br>
 		<br>
 		<input type='button' class='form-control btn btn-primary' value='Guardar Usuario' onClick='insertarUsuarios()'>
