Corrigiendo errores de modificar usuario

--- a/insertarUsuarios.html
+++ b/insertarUsuarios.html
@@ -9,7 +9,7 @@
 		<label class='label label-default'>Seleccione el perfil:</label>
 		<input type='radio' value='admin' name='perfil' id='admin'><br>Administrador
 		<br>
-		<input type='radio' value='testing' name='perfil' id='user'>Usuario
+		<input type='radio' value='testing' name='perfil' id='testing'>Usuario
 		<br>
 		<br>
 		<input type='button' class='form-control btn btn-primary' value='Guardar Usuario' onClick='insertarUsuarios()'>
