--- a/insertarPatente.html
+++ b/insertarPatente.html
@@ -1,7 +1,9 @@
 <body>
 		<div id="ingresarAuto">
-				<input type="text" class="form-control text-success" id="patente" name="patente" placeholder="INGRESE PATENTE AQUI">
+				<input focus type="text" class="form-control text-success" id="patente" name="patente" placeholder="INGRESE PATENTE AQUI">
 				
+				
+
 				<input type="button" onClick='insertarPatente()' class="btn btn-primary btn_block form-control" value="Ingresar Patente" id="guardar" name="guardar">
 
 		</div>
