--- a/insertarPatente.html
+++ b/insertarPatente.html
@@ -4,7 +4,7 @@
 				
 				
 
-				<input type="button" onClick='insertarPatente()' class="btn btn-primary btn_block form-control" value="Ingresar Patente" id="guardar" name="guardar">
+				<input type="button" onClick='insertarPatente()' class="btn btn-primary btn_block form-control" value="Guardar Patente" id="guardar" name="guardar">
 
 		</div>
 </body>
