--- a/insertarUsuarios.html
+++ b/insertarUsuarios.html
@@ -1,18 +1,18 @@
 
-<body>
-	<div id="usuario" class='form-control' style="width:300px">
+	<div id="usuario" class='container' style="width:200px"> 
 
-		<input type='text' class='form-control' placeholder='Ingrese Correo' id='correoIngreso'>
+		<input type='mail' class='form-control' placeholder='Ingrese Correo' id='correoIngreso'>
 		<br>
 		<input type='password' class='form-control' placeholder='Ingrese Password' id='pass'>
 		<br>
-		<label class='label label-default'>Seleccione el perfil:</label>
-		<input type='radio' value='admin' name='perfil' id='admin'><br>Administrador
+		<label class='label label-primary'>Seleccione el perfil: </label><br>
+		<input type='radio' value='admin' name='perfil' id='admin'>Administrador
 		<br>
 		<input type='radio' value='testing' name='perfil' id='testing'>Usuario
 		<br>
+		<input type='button' id='guardarUser' class='form-control btn btn-primary' value='Guardar Usuario' onClick='insertarUsuarios()'>
 		<br>
-		<input type='button' class='form-control btn btn-primary' value='Guardar Usuario' onClick='insertarUsuarios()'>
+		<br>
+		<input type='button' id='cancelarUser' class='form-control btn btn-default' value='Cancelar' onClick='cancelar()'>
 
 	</div>
-</body>
