--- a/insertarUsuarios.html
+++ b/insertarUsuarios.html
@@ -8,7 +8,7 @@
 		<label class='label label-primary'>Seleccione el perfil: </label><br>
 		<input type='radio' value='admin' name='perfil' id='admin'>Administrador
 		<br>
-		<input type='radio' value='testing' name='perfil' id='testing'>Usuario
+		<input type='radio' value='usuario' name='perfil' id='testing'>Usuario
 		<br>
 		<input type='button' id='guardarUser' class='form-control btn btn-primary' value='Guardar Usuario' onClick='insertarUsuarios()'>
 		<br>
